	catch random errors when players who dont get along are matched.
	
	Removed old Gesture data class in favor of new Gestures Enum class
	
	Removed ValidGesture class as this is not technicaly a required datal class now 
	that we have the Gestures Enum class. 
	
June 4, 2014
	Changed the added relationship between players mentioned on June 2. Now players only have 
	team members and there are no captains.
	
	removed testTeams class and incorporated its function into a method in TestDriver
	
	added Runtime Exceptions for trying to put a player on a team with a disliked player(5% chance) 
	and trying to put a player on a team with themselves(1% chance).
	
	added try catch block to the test driver for handling runtime errors as abouv
	
	general code formatting
	
	updated proposal to reflect addition of teamMembers field to the Player class 
	
June 9, 2014
	Changed Player to implement Comparable. Player is comparable first by name then by increasing number of players
	
	Added a testComparePlayers() method to TestDriver. This method sorts the players generated by buildPlayersAndTeams()
	making use of the newly implemented Comparable interface of the Player class.
	
	split logic of the testGenerateTeams() method in TestDriver into two methods, buildPlayersAndTeams() and printTeams().
	testGenerateTeams() now calls these two methods. This enables the newly added testComparePlayers() method to use
	the buildPlayersAndTeams() method.
	
June 16, 2014
	Added a logger of level INFO to the TestDriver class and changed all System.out to use log4j instead.
	added a testDriver.properties file to specify the logger used in TestDriver.
	
June 17, 2014
	Changed testDriver.proporties to have a second appender of level ERROR which is a RollingFileAppender
	set the output file name to testDriverErrorLog.txt.
	Changed the logger level of the caught error logs in the buildPlayersAndTeams method to ERROR.
	Now all errors generated in the buildPlayersAndTeams method will be logged.
	
	